--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -52,7 +52,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       <div class="mt-12 text-center">
         <a
           href="/blog"
-          class="inline-flex items-center text-blue-600 hover:text-blue-800"
+          class="inline-flex items-center text-info hover:text-info/80"
         >
           <svg
             class="w-5 h-5 mr-2"
