--- a/src/pages/politique-confidentialite.astro
+++ b/src/pages/politique-confidentialite.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro";
       <h1 class="text-4xl font-bold text-gray-900 welcome-font mb-4">
         Politique de Confidentialité
       </h1>
-      <div class="w-20 h-1 bg-indigo-600 mx-auto rounded-full"></div>
+      <div class="w-20 h-1 bg-primary mx-auto rounded-full"></div>
     </div>
 
     <div class="prose prose-lg max-w-none">
@@ -302,7 +302,7 @@ import Layout from "../layouts/Layout.astro";
           collecter et stocker certaines informations. Pour plus d'informations
           sur notre utilisation des cookies, veuillez consulter notre <a
             href="/cookies"
-            class="text-indigo-600 hover:text-indigo-800"
+            class="text-info hover:text-info/80"
             >Politique de gestion des cookies</a
           >.
         </p>
