--- a/src/pages/mentions-legales.astro
+++ b/src/pages/mentions-legales.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro";
       <h1 class="text-4xl font-bold text-gray-900 welcome-font mb-4">
         Mentions Légales
       </h1>
-      <div class="w-20 h-1 bg-indigo-600 mx-auto rounded-full"></div>
+      <div class="w-20 h-1 bg-primary mx-auto rounded-full"></div>
     </div>
 
     <div class="prose prose-lg max-w-none">
@@ -130,4 +130,3 @@ import Layout from "../layouts/Layout.astro";
     </div>
   </main>
 </Layout>
-
