--- a/src/pages/plan-du-site.astro
+++ b/src/pages/plan-du-site.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro";
       <h1 class="text-4xl font-bold text-gray-900 welcome-font mb-4">
         Plan du Site
       </h1>
-      <div class="w-20 h-1 bg-indigo-600 mx-auto rounded-full"></div>
+      <div class="w-20 h-1 bg-primary mx-auto rounded-full"></div>
     </div>
 
     <div class="prose prose-lg max-w-none">
@@ -29,7 +29,7 @@ import Layout from "../layouts/Layout.astro";
             <li>
               <a
                 href="/"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -50,8 +50,8 @@ import Layout from "../layouts/Layout.astro";
             </li>
             <li>
               <a
-                href="#services"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                href="/services"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -72,8 +72,8 @@ import Layout from "../layouts/Layout.astro";
             </li>
             <li>
               <a
-                href="#expertise"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                href="/expertise"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -94,8 +94,8 @@ import Layout from "../layouts/Layout.astro";
             </li>
             <li>
               <a
-                href="#temoignages"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                href="/tarifs"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -116,8 +116,8 @@ import Layout from "../layouts/Layout.astro";
             </li>
             <li>
               <a
-                href="#contact"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                href="/contact"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -150,7 +150,7 @@ import Layout from "../layouts/Layout.astro";
             <li>
               <a
                 href="/mentions-legales"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -172,7 +172,7 @@ import Layout from "../layouts/Layout.astro";
             <li>
               <a
                 href="/cgv"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -194,7 +194,7 @@ import Layout from "../layouts/Layout.astro";
             <li>
               <a
                 href="/politique-confidentialite"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -216,7 +216,7 @@ import Layout from "../layouts/Layout.astro";
             <li>
               <a
                 href="/cookies"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -238,7 +238,7 @@ import Layout from "../layouts/Layout.astro";
             <li>
               <a
                 href="/plan-du-site"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -260,7 +260,7 @@ import Layout from "../layouts/Layout.astro";
             <li>
               <a
                 href="/credits"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -292,7 +292,7 @@ import Layout from "../layouts/Layout.astro";
             <li>
               <a
                 href="/blog"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -313,8 +313,8 @@ import Layout from "../layouts/Layout.astro";
             </li>
             <li>
               <a
-                href="#faq"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                href="/faq"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -335,8 +335,8 @@ import Layout from "../layouts/Layout.astro";
             </li>
             <li>
               <a
-                href="#glossaire"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                href="/glossaire"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -357,8 +357,8 @@ import Layout from "../layouts/Layout.astro";
             </li>
             <li>
               <a
-                href="#outils"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                href="/ressources"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -384,8 +384,8 @@ import Layout from "../layouts/Layout.astro";
             </li>
             <li>
               <a
-                href="#actualites"
-                class="text-indigo-600 hover:text-indigo-800 flex items-center"
+                href="/actualites"
+                class="text-info hover:text-info/80 flex items-center"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -411,8 +411,8 @@ import Layout from "../layouts/Layout.astro";
       <div class="mt-16 text-center">
         <p class="text-gray-600">Vous ne trouvez pas ce que vous cherchez ?</p>
         <a
-          href="#contact"
-          class="inline-flex items-center mt-2 text-indigo-600 hover:text-indigo-800"
+          href="/contact"
+          class="inline-flex items-center mt-2 text-info hover:text-info/80"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -434,4 +434,3 @@ import Layout from "../layouts/Layout.astro";
     </div>
   </main>
 </Layout>
-
