--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,6 @@ import Temoignages from "../components/Temoignages.astro";
 import Contact from "../components/Contact.astro";
 import Cta from "../components/Cta.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
-
-import "@/styles/globals.css";
 ---
 
 <!doctype html>
@@ -149,7 +147,7 @@ import "@/styles/globals.css";
       }
     </style>
   </head>
-  <body class="bg-gray-50">
+  <body class="bg-[#E7E8E9]">
     <Header />
     <main class="w-full">
       <div class="max-w-[90%] mx-auto">
