--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,8 @@
 
 @layer base {
     :root {
-        --background: 0 0% 100%;
+        --background: 220 3% 91%;
+        /* #E7E8E9 */
         --foreground: 224 71.4% 4.1%;
 
         --card: 0 0% 100%;
