--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -1,8 +1,15 @@
 ---
-
+import SectionDivider from "./SectionDivider.astro";
 ---
 
 <section class="relative py-20 overflow-hidden">
+  <SectionDivider
+    variant="wave"
+    position="top"
+    color="white"
+    bgColor="transparent"
+  />
+
   <!-- Fond avec dégradé et effet de flou -->
   <div class="absolute inset-0 bg-primary opacity-90"></div>
   <div class="absolute inset-0 bg-[url('/images/pattern.svg')] opacity-10">
@@ -82,4 +89,11 @@
       </a>
     </div>
   </div>
+
+  <SectionDivider
+    variant="curve"
+    position="bottom"
+    color="#E7E8E9"
+    bgColor="transparent"
+  />
 </section>
